service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catserver
  name: catserver
  namespace: catserver
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: catserver
  type: ClusterIP
