ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catserver
  namespace: catserver
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: catserver
            port:
              number: 80
        path: /
        pathType: Prefix
